added matress count.
